button created, onclick function handleClick() created

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="myElement"></div>
+    <button onclick="handleClick()">Click Me</button>
     <script src="index.js">JavaScript Practice</script>
 </body>
 </html>
